taking into account edge cases for old tests

--- a/00 Seed Germination Retesting List.Rmd
+++ b/00 Seed Germination Retesting List.Rmd
@@ -37,15 +37,18 @@ seedAccLim <- seedAcc[Deaccessioned==0,.(SeedAccessionNumber,ScientificName,CNPS
 # Make Table of Status for Each Accession
 
 ```{r status}
-# Summarize Germination Percent of Tests
-germTestMelt <- melt(germTest,
-                     id.vars=c("PK_ID","SeedAccessionNumber","TestType","Baseline","Pretreatment","CSWeeks","NumberSeedsPulled","NumGerminants","PercentGerm","StartDate","PullDate","FinalDate","Notes","SeedsPerRep"),
+
+# Summarize Germination Test Initial Counts for those with initial values in the init columsn
+germTestInitLong <- melt(germTest[!is.na(Rep1Init)],
+                     id.vars=c("PK_ID","SeedAccessionNumber","NumberSeedsPulled",""),
                      measure.vars = names(germTest)[grepl("Init",names(germTest))]
                      ,variable.name="Rep"
-                    , value.name="InitialCount") # this code is not performing correctly
+                    , value.name="InitialCount",na.rm=T) # this code is not performing correctly
 # Remove "_Init" from rep column
-germTestMelt[,Rep:=gsub('Init', '', Rep)]
+germTestInitLong[,Rep:=gsub('Init', '', Rep)]
 
+# Summarize Germination Test Initial Counts & Old Germinants from the old tests
+germTestInitOld <- germTest[,.("PK_ID","SeedAccessionNumber","")]
 
 #melt germLog so that we have one observation for each rep
 germLogMelt <- melt(germLog, id.vars = c("GermLogID","GermTestID","DateChange", names(germLog)[15:18]), measure.vars = names(germLog)[5:14], variable.name="Rep",value.name="measurementCount",na.rm=T)
@@ -56,12 +59,14 @@ germLogMelt[,measurementDate:=as.Date(DateChange,format="%m/%d/%Y")]
 # Merge together log and germ tests
 germMerge <- merge(germTestMelt, germLogMelt, by.x=c("PK_ID","Rep"), by.y=c("GermTestID","Rep"), all.x=T)
 
+
 # Count the Germinants
 germCountsbyRep = germMerge[,.(InitialCount=as.numeric(InitialCount[1]), MaxCount = max(as.numeric(measurementCount),na.rm=T)), by=c("SeedAccessionNumber","PK_ID", "Rep","StartDate","FinalDate","TestType","Baseline")]
 germCountsbyTest  = germCountsbyRep[,.(SeedsTested=sum(InitialCount), Germinants = sum(MaxCount), GermPercent=round(sum(MaxCount)/sum(InitialCount)*100)), by=c("SeedAccessionNumber","TestType","PK_ID","StartDate","FinalDate","Baseline")]
 
 # Make a Table of the Test Types Completed
 germinationSummary <- germCountsbyTest[,.(Baseline=ifelse(grepl("Initial",toString(TestType)),"Yes","No"), 
-                                    BaselineStatus=toString(Baseline[TestType=="Initial"])),by="SeedAccessionNumber"]
+                                 
+                                       BaselineStatus=toString(Baseline[TestType=="Initial"])),by="SeedAccessionNumber"]
 
 ```
